  common.model.ValueMap.StringProvider added
  domain.Entity.StringProvider added
  EntityDefinition.stringProvider field+setter+getter added
  EntityRepository.getStringProvider() added
  Entity.Proxy.toString() changed according to the above
  Entity.hasValue() renamed to containsValue()
  EntityDbConnectionPool.collectStatistics field added
  Configuration.getBooleanValue() added, used throughout
  Property.format field added
  EntityTableCellRenderer changed according to the above
  EntityDefinition.selectQuery field added
  EntityRepository.getSelectQuery() added
  EntityDbConnection.selectMany(), selectPropertyValues() and selectRowCount() changed to take the above into account
  EntityDbConnectionTest improved
  ProfilingModel/Panel improvements
  ServerMonitor improvements
  TextBeanPropertyLink now synchronizes document during setUIPropertyValue()
  EntityTableModel.getSelectedView/ModelIndexes() now return Collection<Integer> instead of int[]
  EntityTableModel.add/setSelectedItemIndexes() now takes List<Integer> as parameter
  EntityDbRemoteServer no longer keeps a reference to the Registry
  ServerMonitor improved
  Configuration.getIntValue() added
  PetstoreTest and EmpDeptTest now use createEntity() exclusively
  ClientInfo.clientHost field added
  Configuration.SERVER_LOGGING_STATUS renamed to SERVER_CLIENT_LOGGING_ENABLED, property name changed to jminor.server.clientLoggingEnabled
  Configuration.SERVER_CONNECTION_SECURE renamed to SERVER_CONNECTION_SSL_ENABLED, property name changed to jminor.server.connection.sslEnabled
  Configuration.SERVER_POOLING_INITIAL renamed to SERVER_CONNECTION_POOLING_INITIAL
  EmpDeptProfiling now performs updates as well as selects
  EntityDbConnectionTest refactored
  PropertySearchModel.toString(Object) bug that prevented proper search state string functionality fixed
  EntityRepository.isPrimaryKeyAutoGenerated() added
  EntityEditModel null validation did not handle non-auto generated primary keys