@@ -1074,3 +1074,4 @@
   PropertySearchModel.toString(Object) bug that prevented proper search state string functionality fixed
   EntityRepository.isPrimaryKeyAutoGenerated() added
   EntityEditModel null validation did not handle non-auto generated primary keys
+  UiUtil.setWaitCursor() now works with multiple frames/dialogs
